--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
       "strict": true,
       "noImplicitAny": false,
       "strictNullChecks": false,
+      "experimentalDecorators": true,
+      "allowJs": true,
       "noImplicitThis": true,
       "alwaysStrict": true,
       "noUnusedLocals": true,
