--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "helmet": "^3.9.0",
     "jsonfile": "5.0.0",
     "microframework-w3tec": "^0.6.3",
+    "moment": "^2.24.0",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.12.1",
