--- a/package.json
+++ b/package.json
@@ -51,12 +51,12 @@
     "event-dispatch": "^0.4.1",
     "express": "^4.16.2",
     "express-basic-auth": "^1.1.3",
-    "express-graphql": "^0.6.11",
+    "express-graphql": "^0.9.0",
     "express-status-monitor": "^1.0.1",
     "faker": "^4.1.0",
     "figlet": "^1.2.0",
     "glob": "^7.1.2",
-    "graphql": "14.0.2",
+    "graphql": "^15.1.0",
     "helmet": "^3.9.0",
     "jsonfile": "5.0.0",
     "jsonwebtoken": "^8.5.1",
