--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,8 @@
         - 
           run: "sudo yarn presetup"
         - 
+          run: "yarn lint"
+        - 
           run: "yarn test"
   version: 2.1
   workflows: 
