--- a/package.json
+++ b/package.json
@@ -109,7 +109,10 @@
     "@types/supertest": "^2.0.4",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "cross-env": "^5.1.1",
+    "eslint": "^7.3.1",
     "jest": "23.6.0",
     "mock-express-request": "^0.2.0",
     "mock-express-response": "^0.2.1",
@@ -120,5 +123,11 @@
   },
   "resolutions": {
     "**/event-stream": "^4.0.1"
+  },
+  "eslintConfig": {
+    "env": {
+      "browser": true,
+      "node": true
+    }
   }
 }
