--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,56 +1,40 @@
---- 
-  jobs: 
-    build: 
-      docker: 
-        - 
-          image: "circleci/node:current"
-      steps: 
-        - checkout
-        - 
-          run: "echo \"npm installing\""
-      # Download and cache dependencies
-      - restore_cache:
+jobs:
+  build:
+    docker:
+      - image: 'circleci/node:current'
+    steps:
+      - checkout
+      - run: echo "npm installing"
+      - restore_cache: null
         keys:
-          - v1-dependencies-{{ checksum "package.json" }}
-          # fallback to using the latest cache if no exact match is found
+          - 'v1-dependencies-{{ checksum "package.json" }}'
           - v1-dependencies-
-
       - run: yarn presetup
-
+      - save_cache: null
+        paths:
+          - node_modules
+        key: 'v1-dependencies-{{ checksum "package.json" }}'
+  test:
+    docker:
+      - image: 'circleci/node:current'
+    steps:
+      - checkout
+      - run: echo "run testing"
+      - restore_cache:
+          keys:
+            - 'v1-dependencies-{{ checksum "package.json" }}'
+            - v1-dependencies-
+      - run: yarn presetup
       - save_cache:
           paths:
             - node_modules
-          key: v1-dependencies-{{ checksum "package.json" }}
-    test: 
-      docker: 
-        - 
-          image: "circleci/node:current"
-      steps: 
-        - checkout
-        - 
-          run: "echo \"run testing\""
-        # Download and cache dependencies
-        - restore_cache:
-          keys:
-            - v1-dependencies-{{ checksum "package.json" }}
-            # fallback to using the latest cache if no exact match is found
-            - v1-dependencies-
-
-        - run: yarn presetup
-
-        - save_cache:
-            paths:
-              - node_modules
-            key: v1-dependencies-{{ checksum "package.json" }}
-        - 
-          run: "yarn lint"
-        - 
-          run: "yarn test"
+          key: 'v1-dependencies-{{ checksum "package.json" }}'
+      - run: yarn lint
+      - run: yarn test
+version: 2.1
+workflows:
+  build_test_lint:
+    jobs:
+      - build
+      - test
   version: 2.1
-  workflows: 
-    build_test_lint: 
-      jobs: 
-        - build
-        - test
-    version: 2.1
-  
