migrated to postgres

--- a/.env.test
+++ b/.env.test
@@ -4,7 +4,7 @@
 APP_NAME=express-typescript-boilerplate
 APP_SCHEMA=http
 APP_HOST=localhost
-APP_PORT=3000
+APP_PORT=3010
 APP_ROUTE_PREFIX=/api
 APP_BANNER=false
 
@@ -17,10 +17,16 @@ LOG_OUTPUT=dev
 #
 # DATABASE
 #
-TYPEORM_CONNECTION=sqlite
-TYPEORM_DATABASE=./mydb.sql
+TYPEORM_CONNECTION=postgres
+TYPEORM_HOST=localhost
+TYPEORM_PORT=5432
+TYPEORM_USERNAME=postgres
+TYPEORM_PASSWORD=root
+TYPEORM_DATABASE=bitrix_test
+TYPEORM_SYNCHRONIZE=false
 TYPEORM_LOGGING=error
 TYPEORM_LOGGER=advanced-console
+RUN_MIGRATIONS=true
 
 #
 # PATH STRUCTRUE
