--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,5 @@
 jobs:
   build:
-    machine: true
     docker:
       - image: 'circleci/node:current'  
     steps:
@@ -15,6 +14,8 @@ jobs:
           paths:
             - node_modules
           key: v1-dependencies-{{ checksum "package.json" }}
+      - setup_remote_docker:
+          docker_layer_caching: true    
       - run: docker build - < Dockerfile
   test:
     docker:
