--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
           key: v1-dependencies-{{ checksum "package.json" }}
       - setup_remote_docker:
           docker_layer_caching: true    
-      - run: docker build - < Dockerfile
+      - run: yarn ci:docker
   test:
     docker:
       - image: 'circleci/node:current'
