--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "setup": "npm start config && npm start setup.script",
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "docker:build": "docker build -t andreymashukov/ecommerce-backend:latest .",
-    "docker:login": "docker login -u $DOCKERHUB_USERNAME -p $DOCKERHUB_PASSWORD",
+    "docker:login": "echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin",
     "ci:docker": "npm run docker:build && npm run docker:login"
   },
   "engines": {
