--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}'",
     "docker:build": "docker build -t andreymashukov/ecommerce-backend:latest .",
     "docker:login": "echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin",
-    "ci:docker": "npm run docker:build && npm run docker:login"
+    "docker:push": "docker push andreymashukov/ecommerce-backend:latest",
+    "ci:docker": "npm run docker:build && npm run docker:login && npm docker:push"
   },
   "engines": {
     "node": ">=12.0.0"
