--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "docker:build": "docker build -t andreymashukov/ecommerce-backend:latest .",
     "docker:login": "echo $DOCKERHUB_PASSWORD | docker login -u $DOCKERHUB_USERNAME --password-stdin",
     "docker:push": "docker push andreymashukov/ecommerce-backend:latest",
-    "ci:docker": "npm run docker:build && npm run docker:login && npm docker:push"
+    "ci:docker": "npm run docker:build && npm run docker:login && npm run docker:push"
   },
   "engines": {
     "node": ">=12.0.0"
