--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,9 @@ jobs:
       - setup_remote_docker:
           docker_layer_caching: true    
       - run: yarn ci:docker
+      - add_ssh_keys:
+          fingerprints:
+            a8:ad:61:7b:b9:07:03:d1:6e:64:3c:70:47:7f:81:7c
       - run: yarn aws:deploy
   test:
     docker:
