--- a/buildspec.yml
+++ b/buildspec.yml
@@ -15,7 +15,7 @@ phases:
   build:
     commands:
       - echo Build started on `date`
-      - yarn buid
+      - yarn build
   post_build:
     commands:
       - echo Build completed on `date`
