--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
     "NodeJS",
     "TypeScript",
     "express",
-    "boilerplate",
-    "skeleton",
-    "starter-kit",
-    "w3tec.ch"
+    "ecommerce"
   ],
   "homepage": "https://github.com/AndreMashukov/ecommerce-backend#readme",
   "author": "Andrey Mashukov <andre.mashukov@gmail.com>",
@@ -61,7 +58,6 @@
     "nps": "^5.9.3",
     "nps-utils": "^1.5.0",
     "pg": "^8.2.1",
-    "pm2": "^4.4.0",
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.6",
     "routing-controllers-openapi": "^1.7.0",
