--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@ node_modules/
 npm-debug.log
 yarn-error.log
 .env
-.env.*
+.env.production
 # OS generated files #
 .DS_Store
 Thumbs.db
@@ -38,3 +38,5 @@ test/**/*.js.map
 coverage/
 !test/preprocessor.js
 mydb.sql
+scripts/
+scripts/*
