--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/AndreMashukov/ecommerce-backend#readme",
   "author": "Andrey Mashukov <andre.mashukov@gmail.com>",
   "dependencies": {
+    "aws-sdk": "^2.721.0",
     "bcrypt": "5.0.0",
     "chalk": "^2.4.1",
     "class-validator": "^0.9.1",
@@ -74,7 +75,8 @@
     "typeorm-typedi-extensions": "^0.2.1",
     "typescript": "^3.6.3",
     "uuid": "^3.3.2",
-    "winston": "3.1.0"
+    "winston": "3.1.0",
+    "winston-cloudwatch": "^2.3.2"
   },
   "jest": {
     "transform": {
