--- a/.env
+++ b/.env
@@ -7,10 +7,10 @@ APP_HOST=localhost
 APP_PORT=3001
 APP_ROUTE_PREFIX=/api
 APP_BANNER=true
-APP_JWT_SECRET=1
-APP_AWS_KEY_ID=2
-APP_AWS_ACCESS_KEY=3
-APP_AWS_REGION=4
+APP_JWT_SECRET=XXXXXXX
+APP_AWS_KEY_ID=XXXXXXXX
+APP_AWS_ACCESS_KEY=XXXXXXXX
+APP_AWS_REGION=XXXXXXXX
 #
 # LOGGING
 #
