--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "event-dispatch": "^0.4.1",
     "express": "^4.16.2",
     "express-basic-auth": "^1.1.3",
+    "express-graphql": "^0.9.0",
     "express-status-monitor": "^1.0.1",
     "faker": "^4.1.0",
     "figlet": "^1.2.0",
@@ -67,7 +68,7 @@
     "swagger-ui-express": "4.0.1",
     "ts-node": "7.0.1",
     "tslint": "^5.8.0",
-
+    "type-graphql": "^0.17.6",
     "typedi": "0.8.0",
     "typeorm": "^0.2.5",
     "typeorm-seeding": "1.0.0-beta.6",
