Revert "Client -> Visitor <-- DataNode."
This reverts commit 249987582cdab916f960e9dce71ed222d66c75c3.

--- a/package.json
+++ b/package.json
@@ -30,9 +30,6 @@
   "dependencies": {
     "aws-sdk": "^2.721.0",
     "bcrypt": "5.0.0",
-    "winston-cloudwatch": "^2.3.2",
-    "moment": "^2.24.0",
-    "jsonwebtoken": "^8.5.1",
     "chalk": "^2.4.1",
     "class-validator": "^0.9.1",
     "class-validator-jsonschema": "^1.3.0",
@@ -45,21 +42,22 @@
     "event-dispatch": "^0.4.1",
     "express": "^4.16.2",
     "express-basic-auth": "^1.1.3",
-    "express-graphql": "^0.6.11",
     "express-status-monitor": "^1.0.1",
     "faker": "^4.1.0",
     "figlet": "^1.2.0",
     "glob": "^7.1.2",
-    "graphql": "14.0.2",
     "helmet": "^3.9.0",
     "jsonfile": "5.0.0",
+    "jsonwebtoken": "^8.5.1",
     "microframework-w3tec": "^0.6.3",
+    "moment": "^2.24.0",
     "morgan": "^1.9.0",
     "mysql": "^2.16.0",
     "nodemon": "^1.12.1",
     "nps": "^5.9.3",
     "nps-utils": "^1.5.0",
-    "pg": "^7.4.3",
+    "pg": "^8.2.1",
+    "pm2": "^4.4.0",
     "reflect-metadata": "^0.1.10",
     "routing-controllers": "^0.7.6",
     "routing-controllers-openapi": "^1.7.0",
@@ -68,14 +66,14 @@
     "swagger-ui-express": "4.0.1",
     "ts-node": "7.0.1",
     "tslint": "^5.8.0",
-    "type-graphql": "^0.15.0",
     "typedi": "0.8.0",
     "typeorm": "^0.2.5",
-    "typeorm-seeding": "^1.0.0-beta.6",
+    "typeorm-seeding": "1.0.0-beta.6",
     "typeorm-typedi-extensions": "^0.2.1",
     "typescript": "^3.6.3",
     "uuid": "^3.3.2",
-    "winston": "3.1.0"
+    "winston": "3.1.0",
+    "winston-cloudwatch": "^2.3.2"
   },
   "jest": {
     "transform": {
@@ -112,13 +110,15 @@
     "@types/supertest": "^2.0.4",
     "@types/uuid": "^3.4.3",
     "@types/winston": "^2.3.7",
+    "@typescript-eslint/eslint-plugin": "^3.4.0",
+    "@typescript-eslint/parser": "^3.4.0",
     "cross-env": "^5.1.1",
+    "eslint": "^7.3.1",
     "jest": "23.6.0",
     "mock-express-request": "^0.2.0",
     "mock-express-response": "^0.2.1",
     "ncp": "^2.0.0",
     "nock": "10.0.0",
-    "sqlite3": "^4.0.0",
     "ts-jest": "23.10.1"
   },
   "resolutions": {
