--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "aws-sdk": "^2.721.0",
     "bcrypt": "5.0.0",
     "chalk": "^2.4.1",
+    "class-transformer": "^0.2.3",
     "class-validator": "^0.9.1",
     "class-validator-jsonschema": "^1.3.0",
     "commander": "^2.19.0",
@@ -42,12 +43,10 @@
     "event-dispatch": "^0.4.1",
     "express": "^4.16.2",
     "express-basic-auth": "^1.1.3",
-    "express-graphql": "^0.9.0",
     "express-status-monitor": "^1.0.1",
     "faker": "^4.1.0",
     "figlet": "^1.2.0",
     "glob": "^7.1.2",
-    "graphql": "^15.1.0",
     "helmet": "^3.9.0",
     "jsonfile": "5.0.0",
     "jsonwebtoken": "^8.5.1",
@@ -61,14 +60,13 @@
     "pg": "^8.2.1",
     "pm2": "^4.4.0",
     "reflect-metadata": "^0.1.10",
-    "routing-controllers": "^0.7.6",
+    "routing-controllers": "^0.8.0",
     "routing-controllers-openapi": "^1.7.0",
     "serve-favicon": "^2.4.5",
     "supertest": "^3.0.0",
     "swagger-ui-express": "4.0.1",
     "ts-node": "7.0.1",
     "tslint": "^5.8.0",
-    "type-graphql": "^0.17.6",
     "typedi": "0.8.0",
     "typeorm": "^0.2.5",
     "typeorm-seeding": "1.0.0-beta.6",
