--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,4 @@
 jobs:
-  deploy-job:
-    steps:
-      - add_ssh_keys:
-          fingerprints:
-            - "d2:18:87:80:52:0d:14:49:a9:ed:fa:5d:4e:ed:82:0c"
   build:
     docker:
       - image: 'circleci/node:current'  
@@ -45,6 +40,8 @@ jobs:
       - run: yarn lint
       - run: yarn test
 version: 2.1
+orbs:
+  aws-code-deploy: circleci/aws-code-deploy@0.0.11
 workflows:
   build_test_lint:
     jobs:
@@ -52,4 +49,12 @@ workflows:
       - build:
           requires:
             - test
+  deploy_application:
+    jobs:
+      - aws-code-deploy/deploy:
+          application-name: myApplication
+          deployment-group: myDeploymentGroup
+          service-role-arn: myDeploymentGroupRoleARN
+          bundle-bucket: myApplicationS3Bucket
+          bundle-key: myS3BucketKey
   version: 2.1
