--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,9 +49,9 @@ workflows:
       - build:
           requires:
             - test
-  deploy_application:
-    jobs:
       - aws-code-deploy/deploy:
+          requires:
+            - build
           application-name: myApplication
           deployment-group: myDeploymentGroup
           service-role-arn: myDeploymentGroupRoleARN
