--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -52,9 +52,9 @@ workflows:
       - aws-code-deploy/deploy:
           requires:
             - build
-          application-name: myApplication
-          deployment-group: myDeploymentGroup
-          service-role-arn: myDeploymentGroupRoleARN
-          bundle-bucket: myApplicationS3Bucket
-          bundle-key: myS3BucketKey
+          application-name: e-b
+          deployment-group: e-b
+          service-role-arn: arn:aws:iam::664947791947:role/CodeDeployService
+          bundle-bucket: sc5a94-deploy-scripts
+          # bundle-key: myS3BucketKey
   version: 2.1
