aws-code-deploy/deploy

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,16 +45,16 @@ orbs:
 workflows:
   build_test_lint:
     jobs:
-      - test
-      - build:
-          requires:
-            - test
+      # - test
+      # - build:
+      #     requires:
+      #       - test
       - aws-code-deploy/deploy:
-          requires:
-            - build
+          # requires:
+          #   - build
           application-name: e-b
           deployment-group: e-b
           service-role-arn: arn:aws:iam::664947791947:role/CodeDeployService
           bundle-bucket: sc5a94-deploy-scripts
-          # bundle-key: myS3BucketKey
+          bundle-key: ecommerce-backend
   version: 2.1
