--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,5 +57,5 @@ workflows:
           service-role-arn: arn:aws:iam::664947791947:role/CodeDeployService
           bundle-bucket: sc5a94-deploy-scripts/ecommerce-backend
           bundle-key: sc5a94-deploy-scripts
-          bundle-type: tgz
+          bundle-type: tar
   version: 2.1
