--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,7 +53,7 @@ workflows:
           # requires:
           #   - build
           application-name: e-b
-          deployment-group: e-b
+          deployment-group: e-b-2021-03
           service-role-arn: arn:aws:iam::664947791947:role/CodeDeployService
           bundle-bucket: sc5a94-deploy-scripts/ecommerce-backend
           bundle-key: sc5a94-deploy-scripts
