--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ workflows:
           application-name: e-b
           deployment-group: e-b-2021-03
           service-role-arn: arn:aws:iam::664947791947:role/CodeDeployService
-          bundle-bucket: sc5a94-deploy-scripts/ecommerce-backend
-          bundle-key: sc5a94-deploy-scripts
+          bundle-bucket: sc5a94-deploy-scripts
+          bundle-key: ecommerce-backend/sc5a94-deploy-scripts
           bundle-type: zip
   version: 2.1
